--- a/src/app/presentation/pages/collection/pages/games/games.component.scss
+++ b/src/app/presentation/pages/collection/pages/games/games.component.scss
@@ -47,6 +47,7 @@
   z-index: calc(var(--z-overlay) + 1);
   transform: translateX(100%);
   transition: transform var(--transition-base);
+  overflow: hidden;
 
   &--open {
     transform: translateX(0);
